[gd_scene load_steps=2 format=3 uid="uid://bjb8lixupxfr5"]

[ext_resource type="Script" path="res://UI/Scenes/network_status.gd" id="1_3hbgk"]

[node name="NetworkStatus" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 83.0
offset_bottom = 52.0
script = ExtResource("1_3hbgk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ConnectionStatus" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Disconnected"

[node name="PlayerCount" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10

[node name="ServerIP" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
